# slc2a8-akt-sensitivity-kras

./: .gitignore  DATA_SOURCES.md  README.md  pyproject.toml
paper/: generate_figures.py  main.tex  references.bib
results/: H13_BIORXIV_OUTLINE.md  H13_RESULTS_FREEZE.md
results/h13h/: roc_data.json  tcga_descriptive.json
scripts/: h13c_deep_dive.py  h13d_pi3k_validation.py  h13e_sanity_checks.py  h13f_metabolic_clue.py  h13g_convergence.py  h13h_reviewer_analyses.py  h13i_pik3ca_confound.py  h13j_kras_only_sensitivity.py  h13k_slc2a8_independence.py
src/pdac/: __init__.py
src/pdac/data/: __init__.py  assemble.py  prepare_geo.py  prepare_methylation.py  prepare_tcga.py
src/pdac/h13_trehalose_vulnerability/: __init__.py  data.py  enrichment.py  figures.py  gene_sets.py  h13b_figures.py  h13b_gene_sets.py  h13b_lineage.py  h13b_patient.py  h13b_pipeline.py  h13b_prism.py  h13b_run.py  pipeline.py  run.py  scoring.py
src/pdac/shared/: __init__.py  cox.py  logging.py
tests/: test_h13_trehalose_vulnerability.py  test_h13b_deepdive.py
