[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slc2a8-akt-biomarker"
version = "1.0.0"
description = "SLC2A8 expression identifies a metabolic tumor subtype selectively sensitive to AKT inhibitors across KRAS-mutant cancers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jeffrey Rhatigan"},
]
dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.12,<2.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=15.0,<19.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "scikit-learn>=1.4,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "N806", "N815"]
